cleaned and documented

--- a/WorkSpace/ProjectCore/ProjectCore.ipynb
+++ b/WorkSpace/ProjectCore/ProjectCore.ipynb
@@ -41,6 +41,11 @@
     "import matplotlib.pyplot as plt\n",
     "%matplotlib inline\n",
     "\n",
+    "# custom tooling for seeding and PRNG\n",
+    "from PRNGs import *\n",
+    "from SeedGenerator import *\n",
+    "\n",
+    "# for data normalization\n",
     "from sklearn import preprocessing"
    ]
   },
@@ -59,46 +64,61 @@
     }
    ],
    "source": [
-    "from PRNGs import *\n",
-    "from SeedGenerator import *\n",
-    "import time\n",
+    "# Generation Parameters: Generate y sets of length z\n",
+    "NumberofSets = 1000\n",
+    "LengthofEachSet = 1000\n",
     "\n",
+    "# train and test data inits\n",
     "x_train = []\n",
     "y_train = []\n",
-    "\n",
     "\n",
     "x_test = []\n",
     "y_test = []\n",
     "\n",
-    "def split_data(x,y, numsets, setlength):\n",
+    "# Description:\n",
+    "# This function invokes the PRNG and obtains y sets of length z. \n",
+    "# Each set has its own seed, obtained from our custom SeedGenerator\n",
+    "# It then splices the last number in a set off and appends\n",
+    "# n-1 to x (for x_train or test) and the nth to y (for y_train or test)\n",
+    "# Params:\n",
+    "# x: gets the first n-1 values of each set\n",
+    "# y: gets the nth value of the set\n",
+    "# numsets: represents the amount of sets\n",
+    "# setlength: represents length of each set\n",
+    "def aggregate_and_split(x,y, numsets, setlength):\n",
     "    temp = []\n",
     "    for i in range(numsets):\n",
     "        t = ticks()\n",
     "        temp = Middle_Square(t,setlength)\n",
-    "        for a in range(len(temp)):\n",
+    "        for a in range(len(temp)): #little expensive\n",
     "            temp[a] = int(temp[a])\n",
     "        n = temp[-1]\n",
     "        y.append(n)\n",
     "        x.append(temp[:-1])\n",
     "             \n",
+    "#### set up training data: ####\n",
+    "aggregate_and_split(x_train, y_train, NumberofSets, LengthofEachSet)\n",
     "\n",
-    "split_data(x_train, y_train, 1000, 1000)\n",
-    "\n",
+    "#normalize data to prevent weight values overflowing (NaN) and convert to np.array\n",
     "x_train = preprocessing.normalize(np.array(x_train))\n",
     "y_train = preprocessing.normalize(np.array([y_train]))\n",
     "\n",
-    "\n",
     "y_train = y_train.flatten() #ravel will be more efficient if we don't need to modify.\n",
     "\n",
-    "split_data(x_test, y_test, 1000, 1000)\n",
+    "\n",
+    "#### set up testing data: ####\n",
+    "aggregate_and_split(x_test, y_test, 1000, 1000)\n",
     "x_test = preprocessing.normalize(np.array(x_test))\n",
     "y_test = preprocessing.normalize(np.array([y_test]))\n",
     "\n",
+    "#normalize data to prevent weight values overflowing (NaN) and convert to np.array\n",
     "x_train = x_train.reshape(x_train.shape[0], x_train.shape[1], 1)\n",
     "x_test = x_test.reshape(x_test.shape[0], x_test.shape[1], 1)\n",
     "\n",
-    "y_test = y_test.flatten()\n",
+    "y_test = y_test.flatten() #ravel will be more efficient if we don't need to modify.\n",
     "\n",
+    "\n",
+    "#various prints:\n",
     "print(x_train.shape)\n",
     "print(y_train.shape)\n",
     "#print(x_train)\n",
@@ -148,12 +168,12 @@
     }
    ],
    "source": [
-    "def adversary(input_width, output_width):\n",
-    "    \"\"\" Returns a keras sequential model.\n",
-    "    :param input_width: the size of the input layer\n",
-    "    :param output_width: the size of the output layer\n",
-    "    :return:\n",
-    "    \"\"\"\n",
+    "# Description:\n",
+    "# This function sets up the model and returns a keras sequential model.\n",
+    "# Params:\n",
+    "# input_width: the size of the input layer\n",
+    "# output_width: the size of the output layer\n",
+    "def predictor(input_width, output_width):\n",
     "    model = keras.Sequential()\n",
     "    model.add(keras.layers.Conv1D(3, 3,\n",
     "                                activation='relu',\n",
@@ -168,12 +188,10 @@
     "    model.add(keras.layers.Dropout(0.25))\n",
     "    model.add(keras.layers.Flatten(name='flatten_1'))\n",
     "    model.add(keras.layers.Dense(4, activation='relu', name='dense_1'))\n",
-    "    model.add(keras.layers.Dense(output_width, activation='relu', name='dense_2'))\n",
-    " \n",
-    "    \n",
+    "    model.add(keras.layers.Dense(output_width, activation='relu', name='dense_2'))    \n",
     "    return model\n",
-    "#https://jovianlin.io/cat-crossentropy-vs-sparse-cat-crossentropy/\n",
-    "mod = adversary(999,1)\n",
+    "\n",
+    "mod = predictor(x_train.shape[1],1)\n",
     "          \n",
     "mod.compile(loss='mean_squared_error', optimizer='adam')\n",
     "mod.summary()"
