Created experiment class

--- a/WorkSpace/ProjectCore/ProjectCore.ipynb
+++ b/WorkSpace/ProjectCore/ProjectCore.ipynb
@@ -8,6 +8,33 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The cell below contains experimental configuration settings in the form of a python dictionary."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "EXPERIMENTCONFIG = {\n",
+    "    'SEED_METHOD' : ''  #using SEED_METHODS.py as source\n",
+    "    'PRNG_METHOD' : '', #using PRNG_METHODS.py as source\n",
+    "    'NUM_SETS' : '',    #generate NUM_SETS sets of length SET_LEN\n",
+    "    'SET_LEN': '',\n",
+    "    'IS_NEW_MODEL' : '',\n",
+    "    'PATH' : '', #if IS_NEW_MODEL, new files will be created / overidden at this location. If !IS_NEW_MODEL, previous model with weights will be loaded. File must be named\n",
+    "    'BATCH_SIZE': '',\n",
+    "    'NUM_EPOCHS': '',\n",
+    "    \n",
+    "}\n",
+    "\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
