--- a/WorkSpace/Milestones/Project Milestones.ipynb
+++ b/WorkSpace/Milestones/Project Milestones.ipynb
@@ -89,11 +89,6 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": []
-  },
-  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -205,6 +200,124 @@
     "   \n",
     "   \n",
     "  **NOTE: It has been discussed among this team that there will be pretty heavy coordination between tasks. Different people are also assisting with other tasks, including the their individual role to balance the load in tasks that are more rigorous.**\n",
+    " \n",
+    " \n",
+    "We have abstracted a lot of the details associated with each of these tasks (for the sake of being concise as per the rubric). These details are actively being discussed in the slack and among smaller chats.\n",
+    "\n",
+    "## Rubric\n",
+    "- [X] Does your report have the necessary table, filled with the correct information? (4 points)\n",
+    "- [X] Does your report answer the questions above clearly and concisely? (4 points)\n",
+    "- [X] Does each team member have a role to play in helping to meet the goals of the next milestone? (4 points)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Milestone 3 - Team 7 \n",
+    "### Due April 14th 2020\n",
+    "Spencer Arnold <br/>\n",
+    "Ryan Hines <br/>\n",
+    "Matthew Hawks <br/>\n",
+    "Jacob Anderson <br/>\n",
+    "Tae Kweon <br/>\n",
+    "Ali Najib <br/>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Deliverable Tracking"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<div style=\"display: block; float:left;\"/>\n",
+    "    <h3>Progress and Projections</h3>\n",
+    "    \n",
+    "| Deliverable | Percent Complete | Percent Complete By Next Milestone | Estimated Completion Date   | \n",
+    "|-------------|:-----:|:------------------------------------------|-------------------------|\n",
+    "| Code        |  98%  | 100% | Apr 16 |\n",
+    "| Paper       |  25%   | 100% | Apr 22 |\n",
+    "| Demo        |  75%   | 95%  | May 1  |\n",
+    "| Presentation|  0%   | 80%  | May 5  |"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### **1. What deliverable goals established in the last milestone report were accomplished to the anticipated percentage?**\n",
+    "\n",
+    "   In the last milestone, we established some goals.\n",
+    "  \n",
+    "   Those goals were:\n",
+    "    \n",
+    "   - [>100%] Task 1: Creating PRNG implementations.\n",
+    "     * Najib Ali\n",
+    "     * Jacob Anderson\n",
+    "   - [>90%] Task 2: Setting up predictive network / core program flow.\n",
+    "     * Ryan Hines\n",
+    "     * Tae Kweon\n",
+    "   - [>90%] Task 3: Figuring out a method of logging (aggregate data to later use in our research paper as we start our trials)\n",
+    "     * Matthew Hawks\n",
+    "   - [>85%] Task 4: Designing the experiment.\n",
+    "     * Spencer Arnold\n",
+    "  \n",
+    "  \n",
+    "   Actual completion percentage:\n",
+    "  \n",
+    "   - [100%] Task 1: Creating PRNG implementations.\n",
+    "     * Najib Ali\n",
+    "     * Jacob Anderson\n",
+    "   - [100%] Task 2: Setting up predictive network / core program flow.\n",
+    "     * Ryan Hines\n",
+    "     * Tae Kweon\n",
+    "   - [100%] Task 3: Figuring out a method of logging (aggregate data to later use in our research paper as we start our trials)\n",
+    "     * Matthew Hawks\n",
+    "   - [98%] Task 4: Designing the experiment.\n",
+    "     * Spencer Arnold\n",
+    "   \n",
+    "   \n",
+    "For task 1, we have all generators complete.\n",
+    "\n",
+    "For task 2, we have all of the predictive net built.\n",
+    "\n",
+    "For task 3, we have implemented all logging necessary to run the experiment\n",
+    "\n",
+    "For task 4, we have all of the experimental design written, but it is likely that some elements will change when we execute the experiment.\n",
+    "\n",
+    "We also built out documentation for the demo and put general information in the readme, abstracted code into individual tasks, parameterized experiment, data, neural net, and logging capability, cleaned up code in general, and are currently in the process of in depth testing and fixing bugs before we run the experiment and complete the paper. \n",
+    "\n",
+    "\n",
+    "\n",
+    "### **2. What deliverable goals established in the last milestone report were were not accomplished to the anticipated percentage?**\n",
+    "\n",
+    "All of them were accomplished plus extra goals that came up. The experimental design and execution and some minor bug fixes is all we have left in terms of the project itself being 100% done. See more in the section below on this.\n",
+    "\n",
+    "### **3. What are the main deliverable goals to meet before the next milestone report, and who is working on them?**\n",
+    "\n",
+    "   Goals for next milestone:\n",
+    "   \n",
+    "   For these goals, we are all heavily working as a team on each of these next goals. For paper completion and paper presentation, \n",
+    "   we will likely divide up into sections.\n",
+    "   \n",
+    "   - Finish testing and bug fixes\n",
+    "   - execute the experiment\n",
+    "   - ensure documentation integrety\n",
+    "   - complete the paper\n",
+    "   - make sure demo is working correctly\n",
+    "   - start working on presentation\n",
     " \n",
     " \n",
     "We have abstracted a lot of the details associated with each of these tasks (for the sake of being concise as per the rubric). These details are actively being discussed in the slack and among smaller chats.\n",
