--- a/WorkSpace/Paper/Paper.ipynb
+++ b/WorkSpace/Paper/Paper.ipynb
@@ -9,6 +9,10 @@
     "\\documentclass[conference]{IEEEtran}\n",
     "%\\IEEEoverridecommandlockouts\n",
     "% The preceding line is only needed to identify funding in the first footnote. If that is unneeded, please comment it out.\n",
+    "\\usepackage{listings}\n",
+    "\\usepackage{csquotes}\n",
+    "\\usepackage{float}\n",
+    "\\usepackage[caption=false]{subfig}\n",
     "\\usepackage{cite}\n",
     "\\usepackage{amsmath,amssymb,amsfonts}\n",
     "\\usepackage{algorithmic}\n",
@@ -47,7 +51,7 @@
     "\\IEEEauthorblockA{\\textit{Department of Computer Science}\\\\\n",
     "\\textit{Middle Tennessee State University}\\\\\n",
     "Murfreesboro, Tennessee \\\\\n",
-    "email address}\\\\[0.2cm]  %<------- Extra vertical space\n",
+    "email address}\\\\[0.4cm]  %<------- Extra vertical space\n",
     "\\IEEEauthorblockN{Matthew Hawks}\n",
     "\\IEEEauthorblockA{\\textit{Department of Computer Science}\\\\\n",
     "\\textit{Middle Tennessee State University}\\\\\n",
@@ -58,7 +62,7 @@
     "\\IEEEauthorblockA{\\textit{Department of Computer Science}\\\\\n",
     "\\textit{Middle Tennessee State University}\\\\\n",
     "Murfreesboro, Tennessee \\\\\n",
-    "email address}\\\\[0.2cm]  %<------- Extra vertical space\n",
+    "email address}\\\\[0.4cm]  %<------- Extra vertical space\n",
     "\\IEEEauthorblockN{Ryan Hines}\n",
     "\\IEEEauthorblockA{\\textit{Department of Computer Science}\\\\\n",
     "\\textit{Middle Tennessee State University}\\\\\n",
@@ -69,7 +73,7 @@
     "\\IEEEauthorblockA{\\textit{Department of Computer Science}\\\\\n",
     "\\textit{Middle Tennessee State University}\\\\\n",
     "Murfreesboro, Tennessee \\\\\n",
-    "email address}\\\\[0.2cm]  %<------- Extra vertical space\n",
+    "email address}\\\\[0.4cm]  %<------- Extra vertical space\n",
     "\\IEEEauthorblockN{Tae Kweon}\n",
     "\\IEEEauthorblockA{\\textit{Department of Computer Science}\\\\\n",
     "\\textit{Middle Tennessee State University}\\\\\n",
@@ -90,6 +94,16 @@
     "This document is a model and instructions for \\LaTeX.\n",
     "This and the IEEEtran.cls file define the components of your paper [title, text, heads, etc.]. *CRITICAL: Do Not Use Symbols, Special Characters, Footnotes, \n",
     "or Math in Paper Title or Abstract.\n",
+    "This document is a model and instructions for \\LaTeX.\n",
+    "This and the IEEEtran.cls file define the components of your paper [title, text, heads, etc.]. *CRITICAL: Do Not Use Symbols, Special Characters, Footnotes, \n",
+    "or Math in Paper Title or Abstract.\n",
+    "This document is a model and instructions for \\LaTeX.\n",
+    "This and the IEEEtran.cls file define the components of your paper [title, text, heads, etc.]. *CRITICAL: Do Not Use Symbols, Special Characters, Footnotes, \n",
+    "or Math in Paper Title or Abstract.\n",
+    "This document is a model and instructions for \\LaTeX.\n",
+    "This and the IEEEtran.cls file define the components of your paper [title, text, heads, etc.]. *CRITICAL: Do Not Use Symbols, Special Characters, Footnotes, \n",
+    "or Math in Paper Title or Abstract.\n",
+    "\n",
     "\\end{abstract}\n"
    ]
   },
@@ -130,8 +144,35 @@
    "source": [
     "% METHODS SECTION\n",
     "\\section{Methods}\n",
+    "\\subsection{Seeding Method}\n",
+    "We went with a seed generation method that allowed a way to introduce some minor level of entropy to avoid letting the neural network aimlessly swim through the entropy of a strong seed instead of gaining stochastic insight on the data from the PRNG. \\newline\n",
+    "The seed generation method we chose derives from the concept of using the system time as an element for seed generation. The specific implementation we chose took inspiration from Microsoft's .NET system.datetime.ticks property. [https://docs.microsoft.com/en-us/dotnet/api/system.datetime.ticks?view=netframework-4.8]. We chose to single out this method due to its documentation and unqiue simplicity. System time is widely used as a parameter for modern seed generation methods. To put it more trivially: \"a pseudo random number generator is a deterministic algorithm that, given an initial number (called seed), generates a sequence of numbers that adequately satisfies statistical randomness tests. Since the algorithm is deterministic, the algorithm will always generate the exact same sequence of numbers if it's initialized with the same seed. That's why system time (something that changes all the time) is usually used as the seed for random number generators.\" (https://stackoverflow.com/users/33708/mehrdad-afshari) \\newline\n",
+    "According to the Microsoft documentation, \"A single tick represents one hundred nanoseconds or one ten-millionth of a second. There are 10,000 ticks in a millisecond, or 10 million ticks in a second. The value of this property represents the number of 100-nanosecond intervals that have elapsed since 12:00:00 midnight, January 1, 0001 in the Gregorian calendar.\"  \\newline\n",
+    "We used a fairly similar Python port \n",
+    "(https://stackoverflow.com/questions/29366914/what-is-python-equivalent-of-cs-system-datetime-ticks)\n",
+    "\\lstset{language=Python}\n",
+    "\\begin{lstlisting}[breaklines=true]\n",
+    "def ticks(dt):\n",
+    "    return (dt-datetime(1,1,1)).total_seconds()*10000000\n",
+    "\\end{lstlisting} \n",
     "\n",
-    "Start typing here \\cite{b3}."
+    "Porting side effects include:\n",
+    "\\begin{enumerate}\n",
+    "    \\item UTC times are assumed.\n",
+    "    \\item The resolution of the datetime object is given by datetime.resolution, which is datetime.timedelta(0, 0, 1) or microsecond resolution (1e-06 seconds). CSharp Ticks are purported to be 1e-07 seconds.\n",
+    "\\end{enumerate}\n",
+    "\n",
+    "Additional changes we made to our implementation:\n",
+    "\\begin{enumerate}\n",
+    "    \\item Changing start time from January 1, 0001 to January 1, 1970, which effectively reduced the length of the seed for experimental purposes.\n",
+    "    \\item Slicing last 6 digits of the ticks result to acquire more digit variation for frequent invocation.\n",
+    "\\end{enumerate}\n",
+    "\n",
+    "This final method allows enough spread between frequently retreived ticks, where we are assuming reasonable pseudo-unpredictabililty. This serves as a simplistic but constantly changing control mechanism for being able to seed PRNGs and test experimental outcomes. While not the most cryptographically strong, we needed a way to have some controlled aspect of seed generation to feed into generators of varying cryptographic complexity (to have some baseline of comparison).\\newline\n",
+    "\n",
+    "The original idea was to feed each PRNG different seeds from the same seed generator; however, many PRNG algorithms impose strict seed requirements to pass tests of randomness. Out of the five PRNG methods we implemented, Lagged Fibonacci was the only one that had special seed requirements, so we created a separate seed generator based on the same fundamental ticks generation method, but modified to meet the restrictions. Other PRNGs not implemented in this research that impose seed restrictions include Wichmann-Hill (which accepts three different seeds) and Maximally Periodic Reciprocals (which requires a Sophie Prime), among others.\\newline\n",
+    "\n",
+    "You might ask: won't different seed generators introduce flaws or bias in the experiment? Well, it depends on what you are testing. In our case, we are strictly testing the \"complexity\" of the generator itself, so supplying a seed that is not blatantly predictable but also not unpredictable was sufficient. Our goal was to allow the charactaristics of the generator to be exposed, for we were cracking the \"complexity\" of the generation algorithm, not the complexity of an arbitrary seed.\n"
    ]
   },
   {
@@ -141,7 +182,70 @@
     "% RESULTS SECTION\n",
     "\\section{Results}\n",
     "\n",
-    "Start typing here \\cite{b4}."
+    "\\begin{figure}[H]\n",
+    "\\centering\n",
+    "\\subfloat[Subfigure 1 list of figures text][Testing Regression Plot]{\n",
+    "\\includegraphics[width=0.4\\linewidth]{./Images/Middle_Square_Reg.png}\n",
+    "\\label{fig:subfig1}}\n",
+    "\\qquad\n",
+    "\\subfloat[Subfigure 2 list of figures text][Training Loss Plot]{\n",
+    "\\includegraphics[width=0.4\\linewidth]{./Images/Middle_Square_Loss.png}\n",
+    "\\label{fig:subfig2}}\n",
+    "\\caption{Middle Square Results}\n",
+    "\\label{fig:globfig}\n",
+    "\\end{figure}\n",
+    "\n",
+    "\\begin{figure}[H]\n",
+    "\\centering\n",
+    "\\subfloat[Subfigure 1 list of figures text][Testing Regression Plot]{\n",
+    "\\includegraphics[width=0.4\\linewidth]{./Images/Linear_Cong_Reg.png}\n",
+    "\\label{fig:subfig1}}\n",
+    "\\qquad\n",
+    "\\subfloat[Subfigure 2 list of figures text][Training Loss Plot]{\n",
+    "\\includegraphics[width=0.4\\linewidth]{./Images/Linear_Cong_Loss.png}\n",
+    "\\label{fig:subfig2}}\n",
+    "\\caption{Linear Congruential Results}\n",
+    "\\label{fig:globfig}\n",
+    "\\end{figure}\n",
+    "\n",
+    "\\begin{figure}[H]\n",
+    "\\centering\n",
+    "\\subfloat[Subfigure 1 list of figures text][Testing Regression Plot]{\n",
+    "\\includegraphics[width=0.4\\linewidth]{./Images/Lagged_Fib_Reg.png}\n",
+    "\\label{fig:subfig1}}\n",
+    "\\qquad\n",
+    "\\subfloat[Subfigure 2 list of figures text][Training Loss Plot]{\n",
+    "\\includegraphics[width=0.4\\linewidth]{./Images/Lagged_Fib_Loss.png}\n",
+    "\\label{fig:subfig2}}\n",
+    "\\caption{Lagged Fibonacci Results}\n",
+    "\\label{fig:globfig}\n",
+    "\\end{figure}\n",
+    "\n",
+    "\\begin{figure}[H]\n",
+    "\\centering\n",
+    "\\subfloat[Subfigure 1 list of figures text][Testing Regression Plot]{\n",
+    "\\includegraphics[width=0.4\\linewidth]{./Images/Park_Miller_Reg.png}\n",
+    "\\label{fig:subfig1}}\n",
+    "\\qquad\n",
+    "\\subfloat[Subfigure 2 list of figures text][Training Loss Plot]{\n",
+    "\\includegraphics[width=0.4\\linewidth]{./Images/Park_Miller_Loss.png}\n",
+    "\\label{fig:subfig2}}\n",
+    "\\caption{Park Miller Results}\n",
+    "\\label{fig:globfig}\n",
+    "\\end{figure}\n",
+    "\n",
+    "\\begin{figure}[H]\n",
+    "\\centering\n",
+    "\\subfloat[Subfigure 1 list of figures text][Testing Regression Plot]{\n",
+    "\\includegraphics[width=0.4\\linewidth]{./Images/Twister_Reg.png}\n",
+    "\\label{fig:subfig1}}\n",
+    "\\qquad\n",
+    "\\subfloat[Subfigure 2 list of figures text][Training Loss Plot]{\n",
+    "\\includegraphics[width=0.4\\linewidth]{./Images/Twister_Loss.png}\n",
+    "\\label{fig:subfig2}}\n",
+    "\\caption{Mersenne Twister Results}\n",
+    "\\label{fig:globfig}\n",
+    "\\end{figure}"
    ]
   },
   {
@@ -150,18 +254,7 @@
    "source": [
     "% DISCUSSION SECTION\n",
     "\\section{Discussion}\n",
-    "\n",
-    "Start typing here \\cite{b5}."
-   ]
-  },
-  {
-   "cell_type": "raw",
-   "metadata": {},
-   "source": [
-    "% REFERENCES\n",
-    "% THIS IS CREATED AUTOMATICALLY\n",
-    "\\bibliographystyle{IEEEtran}\n",
-    "\\bibliography{References} % change if another name is used for References file"
+    "Start typing here her is Start typing here her isStart typing here her isStart typing here her isStart typing here her isStart typing here her isStart typing here her isStart typing here her isStart typing here her isStart typing here her isStart typing here her isStart typing here her isStart typing here her isStart typing here her isStart typing here her isStart typing here her isStart typing here her isStart typing here her isStart typing here her isStart typing here her isStart typing here her isStart typing here her isStart typing here her isStart typing here her isStart typing here her isStart typing here her isStart typing here her isStart typing here her isStart typing here her isStart typing here her is"
    ]
   },
   {
